fixed swagger to include headers
