# app.py
@@ -18,7 +18,11 @@ gql_url = os.getenv('GRAPHQL_URL')
 def token_required(func):
     @wraps(func)
     def decorated(*args, **kwargs):
-        token = request.headers.get('Authorization')
+        auth_header = request.headers.get('Authorization')
+        token=auth_header
+
+        if "Bearer" in token:
+            token=auth_header[7:]
 
         if not token:
             return jsonify({'message': 'Token is missing'}), 401
